--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html dir="ltr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="\icons8-shopaholic-100.png" />
